microservices/whoami/whoami-service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: whoami
