microservices/whoami/whoami-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.mancuso.services`) || Path(`/whoami`)
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-secret
